--- a/portfolio.html
+++ b/portfolio.html
@@ -36,35 +36,35 @@
                 <section id="portfolio">
 
                   <div id="hangman">
-                    <img src="\assets\images\Portfolio 1.jpg" alt="hangman">
+                    <img src="assets/images/Portfolio_1.jpg" alt="hangman">
                     <div>
                       <h3>Hangman</h3>
                     </div>
                   </div>
 
                   <div id="rpggame">
-                    <img src="\assets\images\Portfolio 1.jpg" alt="rpg game">
+                    <img src="assets/images/Portfolio_2.jpg" alt="rpg game">
                     <div>
                       <h3>RPG Game</h3>
                     </div>
                   </div>
 
                   <div id="triviagame">
-                    <img src="\assets\images\Portfolio 1.jpg" alt="trivia game">
+                    <img src="assets/images/Portfolio_3.jpg" alt="trivia game">
                     <div>
                       <h3>Trivia Game</h3>
                     </div>
                   </div>
 
                   <div id="rutgersinfowidget">
-                    <img src="\assets\images\Portfolio 1.jpg" alt="rutgers info widget">
+                    <img src="assets/images/Portfolio_4.jpg" alt="rutgers info widget">
                     <div>
                       <h3>Rutgers Info Widget</h3>
                       </div>
                   </div>
 
                   <div id="rockpaperscissors">
-                    <img src="\assets\images\Portfolio 1.jpg" alt="rock paper scissors">
+                    <img src="assets/images/Portfolio_5.jpg" alt="rock paper scissors">
                     <div>
                       <h3>Rock Paper Scissors</h3>
                     </div>
