--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <!-- <link rel="stylesheet" type="text/css" href="assets\css\reset.css">  -->
-  <link rel="stylesheet" type="text/css" href="assets\css\style.css">
+  <link rel="stylesheet" type="text/css" href="assets\css\reset.css">
+  <link rel ="stylesheet" type="text/css" href="assets\css\style.css">
+  
   <meta charset="UTF-8">
   <title>Brandon's Portfolio Page</title>
 </head>
