--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 
 <head>
+  <link rel="stylesheet" type="text/css" href="assets\css\reset.css">
   <link rel="stylesheet" type="text/css" href="assets\css\style.css">
   <meta charset="UTF-8">
   <title>Brandon's Portfolio Page</title>
@@ -35,36 +36,36 @@
 
                 <section id="portfolio">
 
-                  <div id="hangman">
-                    <img src="assets/images/Portfolio_1.jpg" alt="hangman" style="width: 285px; height: 180px">
+                  <div class="portfolio_item float_left">
+                    <img src="assets/images/Portfolio_1.jpg" alt="hangman" style="width: 265px; height: 180px">
                     <div>
                       <h3>Hangman</h3>
                     </div>
                   </div>
 
-                  <div id="rpggame">
-                    <img src="assets/images/Portfolio_2.jpg" alt="rpg game" style="width: 285px; height: 180px">
+                  <div class="portfolio_item float_right">
+                    <img src="assets/images/Portfolio_2.jpg" alt="rpg game" style="width: 265px; height: 180px">
                     <div>
                       <h3>RPG Game</h3>
                     </div>
                   </div>
 
-                  <div id="triviagame">
-                    <img src="assets/images/Portfolio_3.jpg" alt="trivia game" style="width: 285px; height: 180px">
+                  <div class="portfolio_item float_left">
+                    <img src="assets/images/Portfolio_3.jpg" alt="trivia game" style="width: 265px; height: 180px">
                     <div>
                       <h3>Trivia Game</h3>
                     </div>
                   </div>
 
-                  <div id="rutgersinfowidget">
-                    <img src="assets/images/Portfolio_4.jpg" alt="rutgers info widget" style="width: 285px; height: 180px">
+                  <div class="portfolio_item float_right">
+                    <img src="assets/images/Portfolio_4.jpg" alt="rutgers info widget" style="width: 265px; height: 180px">
                     <div>
                       <h3>Rutgers Info Widget</h3>
                       </div>
                   </div>
 
-                  <div id="rockpaperscissors">
-                    <img src="assets/images/Portfolio_5.jpg" alt="rock paper scissors" style="width: 285px; height: 180px">
+                  <div class="portfolio_item float_left">
+                    <img src="assets/images/Portfolio_5.jpg" alt="rock paper scissors" style="width: 265px; height: 180px">
                     <div>
                       <h3>Rock Paper Scissors</h3>
                     </div>
